Begun work on lyapunov function

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,13 +1,14 @@
-@article{Jorgenson1963,
-abstract = {This paper provided a theoretical framework for investment behavior based on a neoclassical theory of optimal capital accumulation. The paper introduced the user cost of capital as the key variable that combines the cost of finance (interest rates and equity yields) and tax rules (tax rates, depreciation schedules) and combined this user cost measure with the Cobb-Douglas production technology to obtain a desired stock of capital. Jorgenson then used the resulting implied optimal capi- tal stock to derive an econometric equation for investment. Generalizations of the Jorgenson framework (e.g., to allow for more general production functions) made this the standard approach to the empirical study of the determinants of investment. The user cost of capital also became the key concept for the theoretical study of the effects of alternative tax rules.},
-author = {Jorgenson, Dale W},
-file = {:home/bzk/files/downloads/1823868.pdf:pdf},
-journal = {American Economic Review},
-number = {2},
-pages = {247--259},
-title = {{Capital Theory and Investment Behavior}},
-volume = {53},
-year = {1963}
+@book{MedioAlfredo2001Ndap,
+abstract = {An advanced undergraduate and graduate textbook on the theory of nonlinear dynamical systems.},
+address = {Cambridge ; New York},
+author = {Medio, Alfredo and Lines, Marji},
+file = {:home/bzk/files/downloads/Nonlinear{\_}Dynamics{\_}A{\_}Primer{\_}----{\_}(7{\_}Characteristic{\_}exponents,{\_}fractals,{\_}homoclinic{\_}orbits).pdf:pdf},
+isbn = {0511154739},
+keywords = {Differentiable dynamical systems,Electronic books,Nonlinear theories},
+pages = {316},
+publisher = {Cambridge University Press},
+title = {{Nonlinear Dynamics: A Primer}},
+year = {2001}
 }
 @article{Matalon2009,
 abstract = {This lecture describes recent theoretical developments associated with the dynamics of flames, obtained primarily by exploiting the various temporal and length scales involved in the combustion process. In premixed flames the focus is on flame-flow interactions that occur during the nonlinear development of hydrodynamically unstable large-scale flames, or during the propagation of curved flames in two-dimensional channels. The second part of the paper deals with non-premixed and partially premixed flames, where the focus is on understanding the nature of diffusive-thermal instabilities including the effect of thermal expansion, and on stabilization mechanisms of edge flames, which possess characteristics of both premixed and diffusion flames. The results presented in this talk illustrate how simplified models, when analyzed to their extreme, yield predictions of qualitative nature with physical insight that have advanced our understanding of combustion. This insight can be used to guide the experimental efforts, explain observations and validate large-scale numerical simulations. {\textcopyright} 2009 The Combustion Institute. Published by Elsevier Inc. All rights reserved.},
@@ -415,16 +416,6 @@ publisher = {Springer-Verlag},
 title = {{Attractors, Bifurcations, {\&} Chaos}},
 year = {2003}
 }
-@article{Samuelson1939,
-author = {Samuelson, Paul A.},
-file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Samuelson - 1939 - Interactions between the Multiplier Analysis and the Principle of Acceleration.pdf:pdf},
-journal = {The Review of Economics and Statistics},
-number = {2},
-pages = {75--78},
-title = {{Interactions between the Multiplier Analysis and the Principle of Acceleration}},
-volume = {21},
-year = {1939}
-}
 @article{Wegener2009,
 abstract = {Metzler's model is an important contribution to our understanding of the dynamics of business cycles. In his model, the production of consumption goods depends on expected future sales. However, Metzler assumes that producers are homogeneous and follow a simple expectation formation rule. Taking into account that in reality producers might not only follow several expectation formation rules, but might also even switch between them, we reformulate Metzler's original model. As it turns out endogenous business cycles may emerge within our model, i.e. changes in production and inventory are (quasi-)periodic for certain parameter combinations. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
 author = {Wegener, Michael and Westerhoff, Frank and Zaklan, Georg},
@@ -441,6 +432,53 @@ title = {{A Metzlerian business cycle model with nonlinear heterogeneous expecta
 url = {https://www.sciencedirect.com/science/article/pii/S0264999309000303},
 volume = {26},
 year = {2009}
+}
+@article{Metzler1941,
+author = {Metzler, Lloyd A.},
+doi = {10.2307/1927555},
+file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Metzler - 1941 - The Nature and Stability of Inventory Cycles.pdf:pdf},
+isbn = {0262032287},
+issn = {00346535},
+journal = {The Review of Economics and Statistics},
+month = {aug},
+number = {3},
+pages = {113},
+title = {{The Nature and Stability of Inventory Cycles}},
+url = {https://www.jstor.org/stable/1927555?origin=crossref http://www.jstor.org/stable/1927555?origin=crossref},
+volume = {23},
+year = {1941}
+}
+@article{Jorgenson1963,
+abstract = {This paper provided a theoretical framework for investment behavior based on a neoclassical theory of optimal capital accumulation. The paper introduced the user cost of capital as the key variable that combines the cost of finance (interest rates and equity yields) and tax rules (tax rates, depreciation schedules) and combined this user cost measure with the Cobb-Douglas production technology to obtain a desired stock of capital. Jorgenson then used the resulting implied optimal capi- tal stock to derive an econometric equation for investment. Generalizations of the Jorgenson framework (e.g., to allow for more general production functions) made this the standard approach to the empirical study of the determinants of investment. The user cost of capital also became the key concept for the theoretical study of the effects of alternative tax rules.},
+author = {Jorgenson, Dale W},
+file = {:home/bzk/files/downloads/1823868.pdf:pdf},
+journal = {American Economic Review},
+number = {2},
+pages = {247--259},
+title = {{Capital Theory and Investment Behavior}},
+volume = {53},
+year = {1963}
+}
+@book{2006Bcdm,
+abstract = {Business cycle theory has been one of the fastest growing fields in modern nonlinear economic dynamics. The book is centered around models of multiplier-accelerator type, emerging from Samuelson's seminal work, later developed into nonlinear formats by Hicks and Goodwin. These models left open ends, as the tools then available did not permit more systematic analysis. The present situation is different, due to the emergence of new methods also focusing global analysis. The focus on classical, causal or recursive models implies a deviation from current main stream business cycle theory, based on "rational expectations", which in view of the possibility of mathematical chaos becomes untenable. This book is a rejoinder to Puu and Sushko, Oligopoly Dynamics - Models and Tools, (Springer 2002).},
+address = {Berlin ; New York},
+editor = {Puu, T{\"{o}}nu and Sushko, Iryna},
+file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - 2006 - Business cycle dynamics models and tools.pdf:pdf},
+isbn = {1280615192},
+keywords = {Business cycles -- Mathematical models -- Congress,Economics -- Mathematical models -- Congresses,Electronic books},
+publisher = {Springer},
+title = {{Business cycle dynamics models and tools}},
+year = {2006}
+}
+@article{Samuelson1939,
+author = {Samuelson, Paul A.},
+file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Samuelson - 1939 - Interactions between the Multiplier Analysis and the Principle of Acceleration.pdf:pdf},
+journal = {The Review of Economics and Statistics},
+number = {2},
+pages = {75--78},
+title = {{Interactions between the Multiplier Analysis and the Principle of Acceleration}},
+volume = {21},
+year = {1939}
 }
 @article{LEE1987,
 abstract = {We characterize the equivalence of single-input single-output discrete-time non- linear systems to linear ones, via a state-coordinate change and with or without feedback. Four casesare distinguishedbyallowingor disallowing feedback as well as by including the output map or not; the interdependence of these problems is analyzed.An important feature that distinguishesthese discrete-time problems from the corresponding problem in continuous-time is that the state-coordinate trans- formation is here directly computable as a higher composition of the system and output maps. Finally, certain connections are made with the continuous-time case.},
@@ -481,21 +519,6 @@ title = {{Estimating the Lyapunov exponents of discrete system}},
 url = {http://aip.scitation.org/doi/10.1063/1.1741751},
 volume = {14},
 year = {2004}
-}
-@article{Metzler1941,
-author = {Metzler, Lloyd A.},
-doi = {10.2307/1927555},
-file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Metzler - 1941 - The Nature and Stability of Inventory Cycles.pdf:pdf},
-isbn = {0262032287},
-issn = {00346535},
-journal = {The Review of Economics and Statistics},
-month = {aug},
-number = {3},
-pages = {113},
-title = {{The Nature and Stability of Inventory Cycles}},
-url = {https://www.jstor.org/stable/1927555?origin=crossref http://www.jstor.org/stable/1927555?origin=crossref},
-volume = {23},
-year = {1941}
 }
 @article{Field1986,
 author = {Field, Richard J. and Foersterling, Horst Dieter},
@@ -607,15 +630,4 @@ title = {{Optimal Fiscal and Monetary Policy}},
 type = {Working Paper},
 url = {http://www.nber.org/papers/w6891},
 year = {1999}
-}
-@book{2006Bcdm,
-abstract = {Business cycle theory has been one of the fastest growing fields in modern nonlinear economic dynamics. The book is centered around models of multiplier-accelerator type, emerging from Samuelson's seminal work, later developed into nonlinear formats by Hicks and Goodwin. These models left open ends, as the tools then available did not permit more systematic analysis. The present situation is different, due to the emergence of new methods also focusing global analysis. The focus on classical, causal or recursive models implies a deviation from current main stream business cycle theory, based on "rational expectations", which in view of the possibility of mathematical chaos becomes untenable. This book is a rejoinder to Puu and Sushko, Oligopoly Dynamics - Models and Tools, (Springer 2002).},
-address = {Berlin ; New York},
-editor = {Puu, T{\"{o}}nu and Sushko, Iryna},
-file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - 2006 - Business cycle dynamics models and tools.pdf:pdf},
-isbn = {1280615192},
-keywords = {Business cycles -- Mathematical models -- Congress,Economics -- Mathematical models -- Congresses,Electronic books},
-publisher = {Springer},
-title = {{Business cycle dynamics models and tools}},
-year = {2006}
 }
