Allowed eps files to be pushed to github. Deleted other lyapunov files

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -96,11 +96,11 @@ articletitle
 \tableofcontents
 \chapter{Introduction}
 \input{chapters/introduction}
-\chapter{Multiplier-Acclerator Business Cycles by T\"{o}nu Puu}\label{ch:multiplier-accelerator}
+\chapter{Multiplier-Acclerator Business Cycles}\label{ch:multiplier-accelerator}
 \input{chapters/multiplier-accelerator}
 \chapter{Heterogenous Inventory Cycles by Westerhoff et al.}
 \input{chapters/metzlerian_basic}
-\chapter{Inventory Cycles with Averaged Expectations, Endogenous Investment, and Consumption Lag}
+\chapter{Inventory Cycles with Averaged Expectations,\\ Endogenous Investment, and Consumption Lag}
 \input{chapters/metzlerian_expanded}
 \chapter{Conclusion}
 \input{chapters/conclusion}
@@ -111,7 +111,7 @@ articletitle
 \input{chapters/appendix_growth}
 \chapter{Computational Analysis of the Logistic Map}
 \input{chapters/appendix_comp-logistic}
-\chapter{Computational Analysis of the Multiplier-Accelerator Model}
+\chapter{Computational Analysis of the\\ Multiplier-Accelerator Model}
 \input{chapters/appendix_comp-multiplier_accelerator}
 \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Heterogenous Expectation Rules}
 \input{chapters/appendix_comp-metzlerian}
