--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -99,9 +99,9 @@ articletitle
 \input{chapters/introduction}
 \chapter{Multiplier-Acclerator Business Cycles}\label{ch:multiplier-accelerator}
 \input{chapters/multiplier-accelerator}
-\chapter{Heterogenous Inventory Cycles by Westerhoff et al.}
+\chapter{Heterogenous Inventory Cycles by Wegener et al.}
 \input{chapters/metzlerian_basic}
-\chapter{Inventory Cycles with Averaged Expectations,\\ Endogenous Investment, and Consumption Lag}
+\chapter{Inventory Cycles with Averaged Expectations,\\ Endogenous Investment, and Consumption Lag}\label{ch:metzlerian-expanded}
 \input{chapters/metzlerian_expanded}
 \chapter{Conclusion}
 \input{chapters/conclusion}
