--- a/metzlerian/expanded/model_description.tex
+++ b/metzlerian/expanded/model_description.tex
@@ -41,11 +41,11 @@
 \setlength{\droptitle}{-1 in}
 
 \begin{document}
-\section*{From Westerhoff's Metzlerian Inventory Cycle}
+\section*{From Wegener's Metzlerian Inventory Cycle}
 \begin{equation}
 	Y_t=I_t+S_t+U_t
 \end{equation}
-Income is made up of the same components as cited in Westerhoff's model, production for investment $I_t$, production for inventory $S_t$, and production intended for consumption in that time period $C_t$.
+Income is made up of the same components as cited in Wegener's model, production for investment $I_t$, production for inventory $S_t$, and production intended for consumption in that time period $C_t$.
 \begin{gather}
 	S_t=\hat Q_t -Q_{t-1}\\
 	\hat Q_t=k U_t\\
@@ -62,11 +62,11 @@ Investment is dependent on the most recent change in income.
 \end{equation}
 Actual consumption is also based on income from the past two periods. There is a lag in the reaction of consumers to changes in income so consumption in the current period is equal to income from the previous period multiplied by the marginal propensity to consume. Moreover, income saved from two periods ago is likewise also expended in the current period. This is a typical Robertson lag as described in Metzler.
 \section*{A New Mechanism for Predicting Consumption}
-Westerhoff's model incorporates heterogenous expectations for income. This original model does not incorporate any Robertson lag but instead, it has a Lundberg style lag. That is to say, consumption is based on income of the current period but there is a lag between consumption change and response in consumption change. 
+Wegener's model incorporates heterogenous expectations for income. This original model does not incorporate any Robertson lag but instead, it has a Lundberg style lag. That is to say, consumption is based on income of the current period but there is a lag between consumption change and response in consumption change. 
 
 By adding a Robertson lag to the model, we must readjust the timescale reactions of the model. Metzler claims that there is uncertainty with regards to which of the two forms of lags are of a shorter time scale. 
 
-If we assume that the two lags operate on the same time-scale, then expected consumption should operate on a 1-period time lag similar to that of consumption. The model described in Westerhoff does use a 1-period lag; however, it is reliant on the difference between the steady-state level of income and the lagged income. However, the model in Tonu Puu, depending on the parameter choice, features enodgenous growth. This would result in the absence of any steady state level of income, forcing a modification of the model.
+If we assume that the two lags operate on the same time-scale, then expected consumption should operate on a 1-period time lag similar to that of consumption. The model described in Wegener does use a 1-period lag; however, it is reliant on the difference between the steady-state level of income and the lagged income. However, the model in Tonu Puu, depending on the parameter choice, features enodgenous growth. This would result in the absence of any steady state level of income, forcing a modification of the model.
 \subsection*{2nd-Order Homogenous Extrapolative Behavior}
 Similarly to Metzler's original paper, we can provide an extrapolative behavior for firms:
 \begin{equation}
