Completed rough draft

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -107,16 +107,16 @@ articletitle
 \input{chapters/conclusion}
 \chapter{References}
 \input{chapters/references}
-% \begin{appendices}
-% \chapter{Solving for Change in Income}\label{appendix_growth}
-% \input{chapters/appendix_growth}
-% \chapter{Computational Analysis of the Logistic Map}
-% \input{chapters/appendix_comp-logistic}
-% \chapter{Computational Analysis of the\\ Multiplier-Accelerator Model}
-% \input{chapters/appendix_comp-multiplier_accelerator}
-% \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Heterogenous Expectation Rules}
-% \input{chapters/appendix_comp-metzlerian}
-% \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Averaged Expectations, Endogenous Investment, and Consumption Lag}
-% \input{chapters/appendix_comp-metzlerian_growth}	
-% \end{appendices}
+\begin{appendices}
+\chapter{Solving for Change in Income}\label{appendix_growth}
+\input{chapters/appendix_growth}
+\chapter{Computational Analysis of the Logistic Map}
+\input{chapters/appendix_comp-logistic}
+\chapter{Computational Analysis of the\\ Multiplier-Accelerator Model}
+\input{chapters/appendix_comp-multiplier_accelerator}
+\chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Heterogenous Expectation Rules}
+\input{chapters/appendix_comp-metzlerian}
+\chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Averaged Expectations, Endogenous Investment, and Consumption Lag}
+\input{chapters/appendix_comp-metzlerian_growth}	
+\end{appendices}
 \end{document}
