Completed first draft of presentation

--- a/metzlerian/basic/model_description.tex
+++ b/metzlerian/basic/model_description.tex
@@ -134,7 +134,7 @@ The key aspect of the model given by producer expectations can also be expanded 
 	w_t=\frac{1}{1+d(\bar C-C_{t-1})^2}\\
 \end{gather*}
 \subsection*{Incorporating Endogenous Investment}
-This method of incorporating invesment makes use of a similar method to Hicks' multiplier-accelerator discrete time model. The function cannot be copied exactly due to the differences in timescale and assumptions. 
+This method of incorporating investment makes use of a similar method to Hicks' multiplier-accelerator discrete time model. The function cannot be copied exactly due to the differences in timescale and assumptions. 
 
 The Hicks-Goodwin investment curve incorporates public investments into the investment function; however, as the expanded Metzlerian model I am working on has explicit government spending, their will not exist the same back-bending behavior. However, there investment should not be allowed to increase or decrease infinitely so it should calculated using a hyperbolic tangent curve, not a linear-cubic taylor series expansion.
 
