--- a/presentation-2/presentation-2.tex
+++ b/presentation-2/presentation-2.tex
@@ -13,7 +13,6 @@
 \usepackage[babel]{csquotes}%Nicer quotations%
 \usepackage{indentfirst}
 \usepackage[protrusion=true,expansion=true]{microtype}
-\usepackage{enumitem}%Different enumeration options%
 %Math Formatting%
 \usepackage{amsmath}%AMS Math%
 \usepackage{amsthm}%Theorem Formatting%
@@ -62,6 +61,7 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\textwidth]{brownian_motion.eps}
+			\caption{Discrete brownian motion of a single particle over 100 iterations with a mean of 0 and a standard deviation of 1.}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -79,18 +79,19 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics{bz_reaction.jpg}
+			\caption{Still image of the BZ-reaction}
 		\end{figure}
 	\end{column}
 	\end{columns}
 \end{frame}
 \note{Fractals and chaos theory are common in physical dynamical systems but are increasing in popularity in chemistry for their ability to model and explain cyclic processes like the BZ-reaction. It is also necessary to accurately describe phenomena such as flame dynamics and surface chemistry}
-\begin{frame}{Overview}
-	\begin{itemize}
-		\item Wegener et al.: Inventory cycle model with a Lundberg lag
-		\item T\"onu Puu: Multiplier-acclerator growth model with a Robertson lag
-		\item Benjamin Bui: Inventory Cycles with endogenous investment
-	\end{itemize}
-\end{frame}
+% \begin{frame}{Overview}
+% 	\begin{itemize}
+% 		\item Wegener et al.: Inventory cycle model with a Lundberg lag
+% 		\item T\"onu Puu: Multiplier-acclerator growth model with a Robertson lag
+% 		\item Benjamin Bui: Inventory Cycles with endogenous investment
+% 	\end{itemize}
+% \end{frame}
 \section*{Inventory Cycles}
 \begin{frame}{Background}
 	\begin{itemize}
@@ -104,14 +105,14 @@ style=chem-acs
 	\begin{column}{0.5\textwidth}
 		\begin{itemize}
 			\item Investment is held as endogenous 
-			\item Consumption is a lagged proportion of income
+			\item Consumption is a proportion of income
 		\end{itemize}
 	\end{column}
 	\begin{column}{0.5\textwidth}
-		\begin{align}
+		\begin{align*}
 			I_t &= \bar I\\
 			C_t &= bY_t
-		\end{align}
+		\end{align*}
 	\end{column}
 	\end{columns}
 \end{frame}
@@ -120,7 +121,7 @@ style=chem-acs
 	\begin{columns}
 	\begin{column}{0.5\textwidth}
 		\begin{itemize}
-			\item Desired inventory is a proportion of expected income
+			\item Desired inventory is a proportion of expected consumption
 			\item Stock output is made to match desired inventory
 			\item Actual inventory depends on the accuracy of the expectation
 		\end{itemize}
@@ -175,7 +176,8 @@ style=chem-acs
 \begin{frame}{A Possible Trajectory}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.9\textheight]{timeseries_income.eps}
+		\includegraphics[height=0.7\textheight]{timeseries_income.eps}
+		\caption{Timeseries with conditions: $Y_0=40.6,\ U_0=30.3,\ \bar I=10,\ b=0.75,\ c=0.3,\ d=1.0,\ f=0.1,\ k=0.1$}
 	\end{figure}
 \end{frame}
 
@@ -200,7 +202,7 @@ style=chem-acs
 \begin{frame}{The Growth Model}
 	\begin{columns}
 	\begin{column}{0.5\textwidth}
-		Change in income is normalized to be within the range (-1, 1)\autocite{Puu2003}
+		Change in income is normalized\autocite{Puu2003} to be within the range (-1, 1)
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{align*}
@@ -217,38 +219,40 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{2-cyclic.eps}
+			\caption{Cobweb plot with conditions $\mu=2.15$ and $\dot Y_0=0.1$}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{chaos_uncontained.eps}
+			\caption{Cobweb plot with conditions $\mu=2.6$ and $\dot Y_0=0.1$}
 		\end{figure}
 	\end{column}
 	\end{columns}
 \end{frame}
 
-\begin{frame}{Growth Dynamics}
-	\begin{columns}
-	\begin{column}{0.5\textwidth}
-		\begin{figure}
-			\centering
-			\includegraphics[width=1.2\textwidth]{bifurcation.eps}
-		\end{figure}
-	\end{column}
-	\begin{column}{0.5\textwidth}
-		\begin{figure}
-			\centering
-			\includegraphics[width=1.2\textwidth]{lyapunov.eps}
-		\end{figure}
-	\end{column}
-	\end{columns}
-\end{frame}
+% \begin{frame}{Growth Dynamics}
+% 	\begin{columns}
+% 	\begin{column}{0.5\textwidth}
+% 		\begin{figure}
+% 			\centering
+% 			\includegraphics[width=1.2\textwidth]{bifurcation.eps}
+% 		\end{figure}
+% 	\end{column}
+% 	\begin{column}{0.5\textwidth}
+% 		\begin{figure}
+% 			\centering
+% 			\includegraphics[width=1.2\textwidth]{lyapunov.eps}
+% 		\end{figure}
+% 	\end{column}
+% 	\end{columns}
+% \end{frame}
 
 \section*{Inventory Cycle with Growth}
 \begin{frame}{Goal}
 	\begin{itemize}
-		\item To incorporate a Roberson and Lundberg lag in the same model
+		\item To incorporate a Robertson and Lundberg lag in the same model
 		\item To provide a reasonable basis for the boundedly rational behavior of firms
 	\end{itemize}
 \end{frame}
@@ -273,7 +277,8 @@ style=chem-acs
 \begin{frame}{Investment Curve}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.9\textheight]{investment.eps}
+		\includegraphics[height=0.8\textheight]{investment.eps}
+		\caption{Investment curve such that $v=500$ and $q=0.001$}
 	\end{figure}
 \end{frame}
 
@@ -289,6 +294,7 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{maxinvestment.eps}
+			\caption{Plot of maximal investment relative to $q$.}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -297,7 +303,8 @@ style=chem-acs
 \begin{frame}{Investment FWHM}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.9\textheight]{widthinvestment.eps}
+		\includegraphics[height=0.8\textheight]{widthinvestment.eps}
+		\caption{Triangulated plot investment FWHM relative to $v$ and $q$.}
 	\end{figure}
 \end{frame}
 
@@ -343,35 +350,64 @@ style=chem-acs
 	\end{equation*}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{Possible Trajectories}
 	\begin{columns}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=1.2\textwidth]{timeseries1.eps}
+			\includegraphics[width=1.0\textwidth]{timeseries1.eps}
+			\caption{Timeseries plot with parameters: $s=0.6,\ k=0.3,\ v=500,\ q=0.001$. Initial values of $\dot Y$ are: 100, 120, 110, 100, 105, 107}
+			\label{metzlerian_growth-timeseries1}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
-			\includegraphics[width=1.2\textwidth]{timeseries3.eps}
+			\includegraphics[width=1.0\textwidth]{timeseries3.eps}
+			\caption{Timeseries plot of income growth rate over 150 iterations. Parameters identical to Fig. \ref{metzlerian_growth-timeseries1}. Initial values of $\dot Y$ are: 29, 20 , 15 , 10, 20 ,50,}
 		\end{figure}
 	\end{column}
 	\end{columns}
 \end{frame}
 
+\begin{frame}{Determining Chaos}
+	\begin{equation*}
+		J=
+		\begin{bmatrix}\small
+			\frac{\partial f}{\partial Y_{t-1}} & \frac{\partial f}{\partial A_{t-1}} & s+\frac{k+1}{3}s & 0 & \frac{(k+1)(s-1)}{3} & -\frac{(k+1)s}{3}\\
+			1 & 0 & 0 & 0 & 0 & 0\\
+			0 & 1 & 0 & 0 & 0 & 0\\
+			0 & 0 & 1 & 0 & 0 & 0\\
+			0 & 0 & 0 & 1 & 0 & 0\\
+			0 & 0 & 0 & 0 & 1 & 0
+		\end{bmatrix}
+	\end{equation*}
+	\begin{align*}
+		\frac{\partial f}{\partial \dot Y_{t-1}}&= \frac{1}{v\left(q+\frac{Y_{t-1}^4}{v^4}\right)}-\frac{4Y_{t-1}^4}{v^5\left(q+\frac{Y_{t-1}^4}{v^4}\right)}\\
+		\frac{\partial f}{\partial \dot A_{t-1}}&=1+\frac{1}{3}(k+1)(1-s)-s+\frac{4A_{t-1}^4}{v^5\left(q+\frac{A_{t-1}^4}{v^4}\right)^2}-\frac{1}{v\left(q+\frac{A_{t-1}^4}{v^4}\right)}
+	\end{align*}
+\end{frame}
+
+\begin{frame}{Calculating the MLE}
+	\begin{align*}
+		\lambda &= \lim_{j\to\infty}\frac{1}{j}\sum^{t=j}_{j=1}\ln|J_t\cdot v_t|\\
+		v_{t+1} &=\frac{J_t\cdot v_t}{|J_t\cdot v_t|}
+	\end{align*}
+\end{frame}
 \begin{frame}{Propensity to Consume}
 	\begin{columns}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{sbifurcation.eps}
+			\caption{Bifurcation diagram varying s}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{slyplot.eps}
+			\caption{Lyapunov plot varying s}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -383,12 +419,14 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{vbifurcation.eps}
+			\caption{Bifurcation diagram varying v}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{vlyplot.eps}
+			\caption{Lyapunov plot varying v}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -400,12 +438,14 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{qbifurcation.eps}
+			\caption{Bifurcation diagram varying q}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{qlyplot.eps}
+			\caption{Lyapunov plot varying s}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -417,12 +457,14 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y0bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_0$}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y1bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_1$}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -434,12 +476,14 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y2bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_2$}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y3bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_3$}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -451,12 +495,14 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y4bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_4$}
 		\end{figure}
 	\end{column}
 	\begin{column}{0.5\textwidth}
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{y5bifurcation.eps}
+			\caption{Bifurcation diagram varying $\dot Y_5$}
 		\end{figure}
 	\end{column}
 	\end{columns}
