2nd major draft of presentation and paper

--- a/presentation-2/presentation-2.tex
+++ b/presentation-2/presentation-2.tex
@@ -61,7 +61,7 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.9\textwidth]{brownian_motion.eps}
-			\caption{Discrete brownian motion of a single particle over 100 iterations with a mean of 0 and a standard deviation of 1.}
+			\caption{Discrete brownian motion of a 10 independent particles over 100 iterations with a mean of 0 and a standard deviation of 1.}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -84,7 +84,7 @@ style=chem-acs
 	\end{column}
 	\end{columns}
 \end{frame}
-\note{Fractals and chaos theory are common in physical dynamical systems but are increasing in popularity in chemistry for their ability to model and explain cyclic processes like the BZ-reaction. It is also necessary to accurately describe phenomena such as flame dynamics and surface chemistry}
+\note{Fractals and chaos theory are common in physical dynamical systems but are increasing in popularity in chemistry for their ability to model and explain cyclic processes like the BZ-reaction. They have seen less attention than stochastic dynamical systems, only reaching prominence in the 1960s. It has played an important role in providing accurate models describing flame dynamics, electrochemical deposits, surface chemistry, and self-replicating molecules.}
 % \begin{frame}{Overview}
 % 	\begin{itemize}
 % 		\item Wegener et al.: Inventory cycle model with a Lundberg lag
