--- a/presentation-2/presentation-2.tex
+++ b/presentation-2/presentation-2.tex
@@ -364,7 +364,7 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.0\textwidth]{timeseries3.eps}
-			\caption{Timeseries plot of income growth rate over 150 iterations. Parameters identical to Fig. \ref{metzlerian_growth-timeseries1}. Initial values of $\dot Y$ are: 29, 20 , 15 , 10, 20 ,50,}
+			\caption{Timeseries plot of income growth rate over 150 iterations. Parameters identical to Fig. \ref{metzlerian_growth-timeseries1}. Initial values of $\dot Y$ are: 29, 20 , 15 , 10, 20 ,50}
 		\end{figure}
 	\end{column}
 	\end{columns}
@@ -445,7 +445,7 @@ style=chem-acs
 		\begin{figure}
 			\centering
 			\includegraphics[width=1.2\textwidth]{qlyplot.eps}
-			\caption{Lyapunov plot varying s}
+			\caption{Lyapunov plot varying q}
 		\end{figure}
 	\end{column}
 	\end{columns}
